--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,34 @@
   z-index: 9999;
 }
 
+.mock-window {
+  height: 510px;
+}
+
 span.separator {
   display: block;
   border: 1px dotted rgba(235, 233, 233, 0.3);
+  margin-bottom: 1em;
+  margin-top: 1em;
+}
+
+@media (max-width: 740px) {
+  .mock-window-container {
+    width: 100%;
+    padding: 1em;
+  }
+
+  .mock-window-container::after {
+    top: 28px;
+    left: 28px;
+  }
+
+  .mock-window {
+    width: 100%;
+    height: 600px!important;
+  }
+  .mock-window-container p {
+    padding: 2em;
+    font-size: 0.9em;
+  }
 }
