--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -10,7 +10,7 @@
 #main-avatar {
   width: 500px;
   border-radius: 500px;
-  background-color: #EBE9E9;
+  background-color: rgba(235, 233, 233, 0.6);
   padding: 1em;
   margin-top: 2em;
 }
