--- a/src/components/Projects/screenshots.css
+++ b/src/components/Projects/screenshots.css
@@ -1,16 +1,16 @@
-#Screenshots {
-  width: 100%;
-  padding: 1em;
-  min-height: 18vh;
-  margin-top: 1em;
-}
-
-.card {
-  height: 400px;
+#Screenshots .mock-window-container {
   margin-bottom: 1em;
 }
 
-.card img {
+.preview-container {
+  text-align: center;
+  display: block;
+  height: 180px;
+  overflow: hidden;
+  border-radius: 10px;
+  margin-bottom: 1em;
+}
+
+.preview {
   width: 100%;
-  object-fit: cover;
 }
