--- a/src/App.css
+++ b/src/App.css
@@ -34,34 +34,34 @@
 }
 
 .mock-window-container {
-  position: relative;
   font-family: 'IBM Plex Mono', monospace;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  max-width: 900px;
+  width: 100%;
 }
 
-.mock-window-container p {
+.mock-window-container::before {
+  content: url('assets/img/window-btns.svg');
   position: absolute;
-  top: 50px;
-  left: 10px;
+  padding-top: 10px;
+  padding-left: 2px;
+}
+
+.mock-window {
+  background-image: url('assets/img/window.svg');
+  background-size: cover;
   padding: 1em;
+  padding-top: 4em;
+  border-radius: 20px;
+  min-height: 450px;
 }
 
 .mock-window-container .mini-title {
   display: block;
   font-size: 1.5em;
   font-weight: 500;
-}
-
-.mock-window-container::after {
-  content: url('assets/img/window-btns.png');
-  position: absolute;
-  top: 8px;
-  left: 10px;
-  z-index: 9999;
-}
-
-.mock-window {
-  max-width: 100%;
-  height: 510px;
 }
 
 span.separator {
@@ -72,22 +72,13 @@ span.separator {
 }
 
 @media (max-width: 740px) {
-  .mock-window-container {
-    width: 100%;
-    padding: 1em;
+  .mock-window-container::before {
+    padding-top: 8px;
   }
+}
 
-  .mock-window-container::after {
-    top: 28px;
-    left: 28px;
-  }
-
-  .mock-window {
-    width: 100%;
-    height: 600px!important;
-  }
-  .mock-window-container p {
-    padding: 2em;
-    font-size: 0.9em;
+@media (max-width: 445px) {
+  .mock-window-container::before {
+    padding-top: 5px;
   }
 }
