--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,14 +1,24 @@
-#Contact .mock-window-container p {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  width: 95%;
-  padding-top: 2em;
-}
-
 #Contact .mock-window-container a {
   text-decoration: none;
   color: inherit;
-  margin-left: 1em;
-  font-size: 3em;
+  font-size: 4em;
+}
+
+#Contact .mock-window div {
+  display: flex;
+  justify-content: space-evenly;
+  max-width: 100%;
+  padding-top: 3em;
+}
+
+@media (max-width: 470px) {
+  #Contact .mock-window-container a {
+    font-size: 3em;
+  }
+}
+
+@media (max-width: 350px) {
+  #Contact .mock-window-container a {
+    font-size: 2.3em;
+  }
 }
